WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20328
REGRESSION: When transition property is 'all', some transitions are broken after the first time.
https://bugs.webkit.org/show_bug.cgi?id=20328
Summary
REGRESSION: When transition property is 'all', some transitions are broken af...
Simon Fraser (smfr)
Reported
2008-08-07 23:07:24 PDT
In the testcase to be attached, hovering over the list items no longer shows scale or color transitions after they have been selected once. The list items go "dead" to hover. Adding an explicit -webkit-transition-property rule makes it work again.
Attachments
Manual testcase
(2.08 KB, text/html)
2008-08-07 23:07 PDT
,
Simon Fraser (smfr)
no flags
Details
Automated testcase
(1.63 KB, text/html)
2008-08-08 15:26 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch, testcase, changlog
(20.74 KB, patch)
2008-08-11 13:56 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2008-08-07 23:07:45 PDT
Created
attachment 22703
[details]
Manual testcase
Simon Fraser (smfr)
Comment 2
2008-08-07 23:23:39 PDT
Behavior works in
r35532
, broken in
r35620
, broken in
r35625
.
Simon Fraser (smfr)
Comment 3
2008-08-08 00:03:42 PDT
This broke in
r35545
(of course).
Simon Fraser (smfr)
Comment 4
2008-08-08 15:26:48 PDT
Created
attachment 22713
[details]
Automated testcase
Simon Fraser (smfr)
Comment 5
2008-08-08 17:37:19 PDT
That automated testcase doesn't catch all the issues.
Simon Fraser (smfr)
Comment 6
2008-08-11 13:56:00 PDT
Created
attachment 22733
[details]
Patch, testcase, changlog
Dave Hyatt
Comment 7
2008-08-11 15:30:04 PDT
Comment on
attachment 22733
[details]
Patch, testcase, changlog r=me
Simon Fraser (smfr)
Comment 8
2008-08-11 15:44:26 PDT
Committed
r35672
M WebCore/ChangeLog M WebCore/page/AnimationController.cpp M LayoutTests/ChangeLog A LayoutTests/transitions/interrupted-all-transition-expected.txt A LayoutTests/transitions/interrupted-all-transition.html
r35672
= e0d44797ca91baba9b32df622363f49b88fd0c98 (trunk)
Simon Fraser (smfr)
Comment 9
2008-08-11 15:44:48 PDT
Reopen to assign to me (sorry for the noise)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug